# service-builder

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  plan.md  prelude.rs
examples/: config_defaults.rs
service-builder-macro/: Cargo.toml
service-builder-macro/src/: builder.rs  field_attributes.rs  getter.rs  lib.rs  setter.rs
src/: error.rs  lib.rs  prelude.rs
tests/: builder_tests.rs  default_values_test.rs  getter_setter_tests.rs  mocks.rs
