[package]
name = "service-builder"
version = "0.1.0"
edition = "2021"


[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
thiserror = "2.0.7"
service-builder-macro = { path = "service-builder-macro" }

[workspace]
members = [
    ".",
    "service-builder-macro"
]