[package]
name = "service-builder"
version = "0.1.0"
edition = "2021"
authors = ["anil <anil.krcp@gmail.com>"]
description = "A lightweight, type-safe service construction library for Rust that provides compile-time dependency injection through builder pattern"
license = "MIT"
repository = "https://github.com/krcpa/service-builder"
keywords = ["dependency-injection", "builder-pattern", "ioc", "di", "type-safe"]
categories = ["development-tools::build-utils", "rust-patterns", "development-tools"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
service-builder-macro = { path = "service-builder-macro" }
thiserror = "2.0.7"

[workspace]
members = [
    ".",
    "service-builder-macro"
]