[package]
name = "service-builder-macro"
version = "0.1.2"
edition = "2021"
authors = ["anil <anil.krcp@gmail.com>"]
description = "Procedural macros for service-builder"
license = "MIT"
repository = "https://github.com/krcpa/service-builder"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
thiserror = "2.0.7"
